# eaglet

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  viewer.html
eagle-test/: package-lock.json
eagle-test/src/: App.tsx  index.css  logUtils.ts  utils.ts
eagle-test/src/components/: logCard.tsx  product.tsx
eagle-test/src/lib/: collector.ts  index.ts  store.ts  types.ts  utils.ts
eagle-test/src/pages/: dashboard.tsx  product.tsx
src/: http.http  main.rs  models.rs
src/pkg/: mod.rs
src/pkg/db/: postgres.rs
src/pkg/middleware/: cors.rs  mod.rs  rate_limiter.rs
src/pkg/utils/: bucket.rs
