[package]
name = "bytewelle-eagle"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
validator = { version = "0.19", features = ["derive"] }
regex = "1.11.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = "0.1.41"
futures = "0.3.31"
futures-util = "0.3"
actix-cors = "0.7"
# sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "uuid", "json"] }
parking_lot = "0.12"
uuid = { version = "1.8", features = ["v4", "serde"] }